# git_labs

ExtensionChrome/: .gitignore  index.html  manifest.json  popup.html
ExtensionChrome/assets/js/: background.js  script.js
ExtensionChrome/src/libs/evolution/framework/algorithms/: Algorithm.js  AlgorithmInfo.js  Individual.js
ExtensionChrome/src/libs/evolution/framework/problems/: TaskProblemEvaluator.js
ExtensionChrome/src/libs/evolution/framework/utilities/: HashSet.js  Helpers.js  NumberHelper.js  RandomNumberGenerator.js  Stopwatch.js
ExtensionChrome/src/libs/evolution/labs/: SelfAwoidingWalkAlgorithm.js  SequenceIndividual.js
solvers/lssOrel/src/: saw.cpp  saw.h
solversjs/: README.md
solversjs/lssOrel/: CMakeLists.txt  Makefile  main.cpp  rand.h  saw.cpp  saw.h  sequence.cpp  sequence.h
